core/iox_v1_query_api/src/response/snapshots/iox_v1_query_api__response__msgpack__tests__many_statements.snap
---
source: iox_v1_query_api/src/response/msgpack.rs
expression: collect_output(stream).await
---
[[[0,[["m1",["time","t1","f1"],[["1970-01-01T00:00:01Z","t1a",1],["1970-01-01T00:00:02Z","t1a",2]],true]],true]]]
[[[0,[["m1",["time","t1","f1"],[["1970-01-01T00:00:03Z","t1a",3]]]],true]]]
[[[0,[["m2",["time","t1","f1"],[["1970-01-01T00:00:01Z","t1a",1]]]]]]]
[[[1,[["m1",{"t1":"t1a"},["time","f1"],[["1970-01-01T00:00:01Z",1],["1970-01-01T00:00:02Z",2]]]],true]]]
[[[1,[["m1",{"t1":"t1b"},["time","f1"],[["1970-01-01T00:00:03Z",3]]]],true]]]
[[[1,[["m2",{"t1":"t1b"},["time","f1"],[["1970-01-01T00:00:01Z",1]]]]]]]
